--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,21 @@ gl = "*"
 libc = "*"
 freetype-rs = "*"
 png = "*"
+
+[profile.release]
+debug = true
+debug-assertions = false
+opt-level = 3
+overflow-checks = false
+
+[profile.dev]
+debug = true
+opt-level = 1
+incremental = true
+
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release.package."*"]
+opt-level = 3
+
