--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ debug = true
 debug-assertions = false
 opt-level = 3
 overflow-checks = false
+lto = "fat"
+codegen-units = 16
+
 
 [profile.dev]
 debug = true
@@ -30,4 +33,4 @@ opt-level = 3
 
 [profile.release.package."*"]
 opt-level = 3
-
+overflow-checks = false
