--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ libc = "*"
 freetype-rs = "*"
 png = "*"
 walkdir = "*"
+# Rust binding around nativefiledialogs
+nfd = "0.0.4"
 
 [profile.release]
 debug = true
