added regex as dependency, for future syntax highlighting purposes as well as other buffer related operations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ png = "*"
 walkdir = "*"
 # Rust binding around nativefiledialogs
 nfd = "0.0.4"
+# Used for syntax highlighting, and other things (obviously). I suck at performant sub string searching.. so why the hell not use this
+regex = "*"
+
 
 [profile.release]
 debug = true
