Rendering selection *finally* fucking works, after 7 hours of mind-fuckblowing painfulness. This seems also *fucking insanely* ridiculously un-algorithmic the way I've done it. But it works. It will panic however, if we try to select *more* than a "page's" worth. We'll fix that tomorrow.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,13 +25,14 @@ debug-assertions = false
 opt-level = 3
 overflow-checks = false
 lto = false
-codegen-units = 16
+incremental = true
 
 
 [profile.dev]
 debug = true
 opt-level = 0
 incremental = true
+codegen-units = 16
 
 [profile.dev.package."*"]
 opt-level = 3
