started working on the keybindings system. I think i have something that might work It looks not as fast as it can be, and it's going to be a pretty big thing But computers are fast. We just need something working here. And a hashmap of translations of key inputs -> application commands seems like the easiest route here. I would *love* To use function pointers of some kind here, but I'm not sure I can or should, when using Rust.
Either way, this setup makes rebinding at run time *super easy*
Since we can just serialize/deserialize with serde to json formats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ walkdir = "*"
 nfd = "0.0.4"
 # Used for syntax highlighting, and other things (obviously). I suck at performant sub string searching.. so why the hell not use this
 regex = "*"
-
+serde = "*"
+serde_json = "*"
 
 [profile.release]
 debug = true
