--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nfd = "0.0.4"
 regex = "*"
 serde = { version = "*", features = ["derive"] } 
 serde_json = "*"
+serde_with = "*"
 bitflags = "1.2.1"
 
 [profile.release]
