undo/redo working... but unstable still

--- a/default.cfg
+++ b/default.cfg
@@ -1,29 +1,7 @@
 {
   "App Actions": {
-    "ctrl+shift+P": {
-      "pressed": "ListCommands",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+Tab": {
-      "pressed": "CycleFocus",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+shift+W": {
-      "pressed": {
-        "CloseActiveView": true
-      },
-      "repeated": null,
-      "released": null
-    },
     "ctrl+shift+F": {
       "pressed": "SearchInFiles",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+shift+I": {
-      "pressed": "OpenFile",
       "repeated": null,
       "released": null
     },
@@ -32,10 +10,13 @@
       "repeated": null,
       "released": null
     },
-    "ctrl+W": {
-      "pressed": {
-        "CloseActiveView": false
-      },
+    "ctrl+shift+P": {
+      "pressed": "ListCommands",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+shift+I": {
+      "pressed": "OpenFile",
       "repeated": null,
       "released": null
     },
@@ -49,18 +30,37 @@
       "repeated": null,
       "released": null
     },
-    "ctrl+Q": {
-      "pressed": "Quit",
-      "repeated": null,
-      "released": null
-    },
     "ctrl+N": {
       "pressed": "OpenNewView",
       "repeated": null,
       "released": null
     },
+    "ctrl+shift+W": {
+      "pressed": {
+        "CloseActiveView": true
+      },
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+W": {
+      "pressed": {
+        "CloseActiveView": false
+      },
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+Q": {
+      "pressed": "Quit",
+      "repeated": null,
+      "released": null
+    },
     "Escape": {
       "pressed": "Cancel",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+Tab": {
+      "pressed": "CycleFocus",
       "repeated": null,
       "released": null
     },
@@ -71,109 +71,6 @@
     }
   },
   "Text View Actions": {
-    "ctrl+S": {
-      "pressed": "SaveFile",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+shift+Left": {
-      "pressed": {
-        "TextSelect": {
-          "Begin": "Word"
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "Begin": "Word"
-        }
-      },
-      "released": null
-    },
-    "ctrl+Right": {
-      "pressed": {
-        "Movement": {
-          "End": "Word"
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "End": "Word"
-        }
-      },
-      "released": null
-    },
-    "ctrl+Backspace": {
-      "pressed": {
-        "Delete": {
-          "Backward": [
-            "Word",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "Delete": {
-          "Backward": [
-            "Word",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "ctrl+Home": {
-      "pressed": {
-        "Movement": {
-          "Begin": "File"
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "Begin": "File"
-        }
-      },
-      "released": null
-    },
-    "shift+Tab": {
-      "pressed": {
-        "LineOperation": {
-          "ShiftLeft": {
-            "shift_by": 4
-          }
-        }
-      },
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+Delete": {
-      "pressed": {
-        "Delete": {
-          "Forward": [
-            "Word",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "Delete": {
-          "Forward": [
-            "Word",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "ctrl+F": {
-      "pressed": "Find",
-      "repeated": null,
-      "released": null
-    },
-    "Escape": {
-      "pressed": "Cancel",
-      "repeated": null,
-      "released": null
-    },
     "Backspace": {
       "pressed": {
         "Delete": {
@@ -193,60 +90,20 @@
       },
       "released": null
     },
-    "ctrl+shift+Home": {
-      "pressed": {
-        "TextSelect": {
-          "Begin": "File"
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "Begin": "File"
-        }
-      },
+    "ctrl+C": {
+      "pressed": "Copy",
+      "repeated": null,
       "released": null
     },
-    "shift+End": {
+    "shift+Home": {
       "pressed": {
         "TextSelect": {
-          "End": "Line"
+          "Begin": "Line"
         }
       },
       "repeated": {
         "TextSelect": {
-          "End": "Line"
-        }
-      },
-      "released": null
-    },
-    "shift+Up": {
-      "pressed": {
-        "TextSelect": {
-          "Backward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "Backward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "ctrl+shift+Right": {
-      "pressed": {
-        "TextSelect": {
-          "End": "Word"
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "End": "Word"
+          "Begin": "Line"
         }
       },
       "released": null
@@ -270,23 +127,34 @@
       },
       "released": null
     },
-    "ctrl+Left": {
+    "CapsLock": {
+      "pressed": "Cancel",
+      "repeated": null,
+      "released": null
+    },
+    "shift+Up": {
       "pressed": {
-        "Movement": {
-          "Begin": "Word"
+        "TextSelect": {
+          "Backward": [
+            "Line",
+            1
+          ]
         }
       },
       "repeated": {
-        "Movement": {
-          "Begin": "Word"
+        "TextSelect": {
+          "Backward": [
+            "Line",
+            1
+          ]
         }
       },
       "released": null
     },
-    "Tab": {
+    "shift+Tab": {
       "pressed": {
         "LineOperation": {
-          "ShiftRight": {
+          "ShiftLeft": {
             "shift_by": 4
           }
         }
@@ -294,48 +162,19 @@
       "repeated": null,
       "released": null
     },
-    "shift+Right": {
+    "ctrl+Backspace": {
       "pressed": {
-        "TextSelect": {
-          "Forward": [
-            "Char",
+        "Delete": {
+          "Backward": [
+            "Word",
             1
           ]
         }
       },
       "repeated": {
-        "TextSelect": {
-          "Forward": [
-            "Char",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "ctrl+O": {
-      "pressed": "OpenFile",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+C": {
-      "pressed": "Copy",
-      "repeated": null,
-      "released": null
-    },
-    "Right": {
-      "pressed": {
-        "Movement": {
-          "Forward": [
-            "Char",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "Forward": [
-            "Char",
+        "Delete": {
+          "Backward": [
+            "Word",
             1
           ]
         }
@@ -361,46 +200,21 @@
       },
       "released": null
     },
-    "shift+Left": {
+    "ctrl+shift+Left": {
       "pressed": {
         "TextSelect": {
-          "Backward": [
-            "Char",
-            1
-          ]
+          "Begin": "Word"
         }
       },
       "repeated": {
         "TextSelect": {
-          "Backward": [
-            "Char",
-            1
-          ]
+          "Begin": "Word"
         }
       },
       "released": null
     },
-    "shift+Down": {
-      "pressed": {
-        "TextSelect": {
-          "Forward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "Forward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "ctrl+X": {
-      "pressed": "Cut",
+    "ctrl+O": {
+      "pressed": "OpenFile",
       "repeated": null,
       "released": null
     },
@@ -409,92 +223,6 @@
         "InsertStr": "fn main() {\n    println!(\"hello world!\");\n}"
       },
       "repeated": null,
-      "released": null
-    },
-    "Up": {
-      "pressed": {
-        "Movement": {
-          "Backward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "Backward": [
-            "Line",
-            1
-          ]
-        }
-      },
-      "released": null
-    },
-    "Home": {
-      "pressed": {
-        "Movement": {
-          "Begin": "Line"
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "Begin": "Line"
-        }
-      },
-      "released": null
-    },
-    "ctrl+V": {
-      "pressed": "Paste",
-      "repeated": null,
-      "released": null
-    },
-    "shift+Home": {
-      "pressed": {
-        "TextSelect": {
-          "Begin": "Line"
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "Begin": "Line"
-        }
-      },
-      "released": null
-    },
-    "ctrl+shift+End": {
-      "pressed": {
-        "TextSelect": {
-          "End": "File"
-        }
-      },
-      "repeated": {
-        "TextSelect": {
-          "End": "File"
-        }
-      },
-      "released": null
-    },
-    "ctrl+G": {
-      "pressed": "Goto",
-      "repeated": null,
-      "released": null
-    },
-    "Enter": {
-      "pressed": "InputNewline",
-      "repeated": "InputNewline",
-      "released": null
-    },
-    "End": {
-      "pressed": {
-        "Movement": {
-          "End": "Line"
-        }
-      },
-      "repeated": {
-        "Movement": {
-          "End": "Line"
-        }
-      },
       "released": null
     },
     "Delete": {
@@ -516,41 +244,198 @@
       },
       "released": null
     },
-    "ctrl+End": {
+    "ctrl+V": {
+      "pressed": "Paste",
+      "repeated": null,
+      "released": null
+    },
+    "End": {
       "pressed": {
         "Movement": {
-          "End": "File"
+          "End": "Line"
         }
       },
       "repeated": {
         "Movement": {
+          "End": "Line"
+        }
+      },
+      "released": null
+    },
+    "ctrl+shift+Home": {
+      "pressed": {
+        "TextSelect": {
+          "Begin": "File"
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "Begin": "File"
+        }
+      },
+      "released": null
+    },
+    "ctrl+Left": {
+      "pressed": {
+        "Movement": {
+          "Begin": "Word"
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Begin": "Word"
+        }
+      },
+      "released": null
+    },
+    "ctrl+G": {
+      "pressed": "Goto",
+      "repeated": null,
+      "released": null
+    },
+    "Right": {
+      "pressed": {
+        "Movement": {
+          "Forward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Forward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "Up": {
+      "pressed": {
+        "Movement": {
+          "Backward": [
+            "Line",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Backward": [
+            "Line",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "ctrl+Home": {
+      "pressed": {
+        "Movement": {
+          "Begin": "File"
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Begin": "File"
+        }
+      },
+      "released": null
+    },
+    "ctrl+F": {
+      "pressed": "Find",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+shift+Right": {
+      "pressed": {
+        "TextSelect": {
+          "End": "Word"
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "End": "Word"
+        }
+      },
+      "released": null
+    },
+    "Escape": {
+      "pressed": "Cancel",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+S": {
+      "pressed": "SaveFile",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+shift+End": {
+      "pressed": {
+        "TextSelect": {
+          "End": "File"
+        }
+      },
+      "repeated": {
+        "TextSelect": {
           "End": "File"
         }
       },
       "released": null
     },
-    "CapsLock": {
-      "pressed": "Cancel",
+    "Home": {
+      "pressed": {
+        "Movement": {
+          "Begin": "Line"
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Begin": "Line"
+        }
+      },
+      "released": null
+    },
+    "ctrl+X": {
+      "pressed": "Cut",
       "repeated": null,
       "released": null
-    }
-  },
-  "Input Box Actions": {
-    "ctrl+Backspace": {
+    },
+    "ctrl+Z": {
+      "pressed": "Undo",
+      "repeated": "Undo",
+      "released": null
+    },
+    "PageUp": {
       "pressed": {
-        "Delete": {
+        "Movement": {
           "Backward": [
-            "Word",
+            "Page",
             1
           ]
         }
       },
       "repeated": {
-        "Delete": {
+        "Movement": {
           "Backward": [
-            "Word",
+            "Page",
             1
           ]
+        }
+      },
+      "released": null
+    },
+    "ctrl+Right": {
+      "pressed": {
+        "Movement": {
+          "End": "Word"
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "End": "Word"
         }
       },
       "released": null
@@ -574,9 +459,182 @@
       },
       "released": null
     },
-    "Right": {
-      "pressed": "MovecursorRight",
-      "repeated": "MovecursorRight",
+    "shift+End": {
+      "pressed": {
+        "TextSelect": {
+          "End": "Line"
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "End": "Line"
+        }
+      },
+      "released": null
+    },
+    "shift+Left": {
+      "pressed": {
+        "TextSelect": {
+          "Backward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "Backward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "PageDown": {
+      "pressed": {
+        "Movement": {
+          "Forward": [
+            "Page",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "Forward": [
+            "Page",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "shift+Right": {
+      "pressed": {
+        "TextSelect": {
+          "Forward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "Forward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "ctrl+End": {
+      "pressed": {
+        "Movement": {
+          "End": "File"
+        }
+      },
+      "repeated": {
+        "Movement": {
+          "End": "File"
+        }
+      },
+      "released": null
+    },
+    "shift+Down": {
+      "pressed": {
+        "TextSelect": {
+          "Forward": [
+            "Line",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "TextSelect": {
+          "Forward": [
+            "Line",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "Enter": {
+      "pressed": "InputNewline",
+      "repeated": "InputNewline",
+      "released": null
+    },
+    "Tab": {
+      "pressed": {
+        "LineOperation": {
+          "ShiftRight": {
+            "shift_by": 4
+          }
+        }
+      },
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+shift+Z": {
+      "pressed": "Redo",
+      "repeated": "Redo",
+      "released": null
+    }
+  },
+  "Input Box Actions": {
+    "CapsLock": {
+      "pressed": "Cancel",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+X": {
+      "pressed": "Cut",
+      "repeated": null,
+      "released": null
+    },
+    "ctrl+V": {
+      "pressed": "Paste",
+      "repeated": null,
+      "released": null
+    },
+    "Backspace": {
+      "pressed": {
+        "Delete": {
+          "Backward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "Delete": {
+          "Backward": [
+            "Char",
+            1
+          ]
+        }
+      },
+      "released": null
+    },
+    "ctrl+Delete": {
+      "pressed": {
+        "Delete": {
+          "Forward": [
+            "Word",
+            1
+          ]
+        }
+      },
+      "repeated": {
+        "Delete": {
+          "Forward": [
+            "Word",
+            1
+          ]
+        }
+      },
       "released": null
     },
     "Delete": {
@@ -603,11 +661,11 @@
       "repeated": null,
       "released": null
     },
-    "Backspace": {
+    "ctrl+Backspace": {
       "pressed": {
         "Delete": {
           "Backward": [
-            "Char",
+            "Word",
             1
           ]
         }
@@ -615,21 +673,16 @@
       "repeated": {
         "Delete": {
           "Backward": [
-            "Char",
+            "Word",
             1
           ]
         }
       },
       "released": null
     },
-    "Up": {
-      "pressed": "ScrollSelectionUp",
-      "repeated": "ScrollSelectionUp",
-      "released": null
-    },
-    "ctrl+V": {
-      "pressed": "Paste",
-      "repeated": null,
+    "Left": {
+      "pressed": "MovecursorLeft",
+      "repeated": "MovecursorLeft",
       "released": null
     },
     "Escape": {
@@ -637,14 +690,14 @@
       "repeated": null,
       "released": null
     },
-    "CapsLock": {
-      "pressed": "Cancel",
-      "repeated": null,
+    "Right": {
+      "pressed": "MovecursorRight",
+      "repeated": "MovecursorRight",
       "released": null
     },
-    "Left": {
-      "pressed": "MovecursorLeft",
-      "repeated": "MovecursorLeft",
+    "Up": {
+      "pressed": "ScrollSelectionUp",
+      "repeated": "ScrollSelectionUp",
       "released": null
     },
     "Down": {
@@ -654,11 +707,6 @@
     },
     "ctrl+C": {
       "pressed": "Copy",
-      "repeated": null,
-      "released": null
-    },
-    "ctrl+X": {
-      "pressed": "Cut",
       "repeated": null,
       "released": null
     }
